5.3.5 -> 5.3.6:
    - proyvind: add a first prototype scripts/dbconvert.sh for handling rpmdb
        conversion during upgrades.
    - jbj: cooker: fix: legacy RPM_CHAR_TYPE needs to be retrofitted on --erase.
    - jbj: openssl: older openssl-0.9.7a uses OPENSSL_NO_EC disabler.
    - jbj: openssl: older openssl-0.9.7a lacks 2 keygen methods.
    - jbj: nss: older nss-3.12.2.0 lacks certain error returns.
    - jbj: autofu: fix: older elfutils (centos4) doesn't have gelf_getnote().
    - jbj: tests: add a check-convert target.
    - jbj: rpmdb: double the defaults  for locking tunables.
    - jbj: rpmdb: fix: don't bother excluding RPM_CHAR_TYPE sanity check.
    - jbj: rpmdb: fix: don't bother converting to RPM_UINT8_TYPE.
    - jbj: put the rpm -qf 1-liner under #ifdef RPM_VENDOR_MANDRIVA for now.
    - proyvind: fix issue with 'rpm -qf' on unowned file not being
	reported. (launchpad #669130)
    - proyvind: fix assert failure with Fadvise() on non-existing files.
    - proyvind: ditch %gem_unpack macro and make %setup automatically handle
	ruby gem extraction in stead.
    - proyvind: mandriva: fix 'Conflicts: dependencies without release
	misfire'. (mdvbz#55810)
    - proyvind: make sure to expand %buildroot from main package.
    - jbj: devtool: don't distribute internal pcre.
    - proyvind: filetriggers: don't bother w unneeded chroot.
    - devzero2000: add an --setfscontext popt alias (lp#660406)

5.3.4 -> 5.3.5:
    - jbj: release 5.3.5.
    - jbj: stub-in a disabler for "FILE ACID".
    - jbj: i18n: update po files (Translation Project).
    - jbj: beecrypt: fix: polluted builds due to my brain fart. revert.
    - jbj: popt: permit builds with --with-popt=internal all over again. todo++.
    - jbj: tests: fix: eliminate the need to jump start "make check"
	by copy macros from within tree to /usr/lib/rpm.
    - jbj: tests: lose all the *.spec build peculier macros just added.
    - proyvind: add gem_helper.rb and it's corresponding macros %gem_unpack,